# spring-centralized-config-client

./: .gitignore  README.md  pyproject.toml
src/spring-centralized-config-client/: client.py  utils.py
src/spring_centralized_config_client/: client.py
