[build-system]
requires = ["setuptools>=61.0", "requests>=2.26.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spring-centralized-config-client"
version = "1.0.1"
authors = [
  { name="Himanshu Verma", email="himanshu.v09@gmail.com" },
]
description = "A library to fetch spring centralized config in decrypted flat format."
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/himanshuverma09/spring-centralized-config-client"
"Bug Tracker" = "https://github.com/himanshuverma09/spring-centralized-config-client/issues"
